--- a/purrfect/style.css
+++ b/purrfect/style.css
@@ -21,6 +21,12 @@
 	background: #fff; 
 	align-items: center; 
 } 
+
+.textarea {
+	width:200px;
+	height:50px;
+	border:1px solid black;
+}
 .form-container form h3{
 	font-size: 28px; 
 	font-weight: 600; 
