--- a/purrfect/style.css
+++ b/purrfect/style.css
@@ -4,24 +4,30 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 } 
-.container{
+.container {
 	height: 100vh; 
 	width: 100%; 
 	display: flex; 
 	align-items: center; 
 	justify-content: center; 
-	background-color: rgba(0,0,0,0.75); 
+	background-image: url('../login_register/images/Background/purr2.png'); 
+	background-size: cover;
 } 
+.registration {
+	background-image: url('../login_register/images/Background/purr3.png');
+} 
+.logIn {
+	background-image: url('../login_register/images/Background/purr2.png');
+}
 .form {
-	position:relative;
-	max-width: 430px; 
+	position:fixed;
+	max-width: 500px; 
+	inset: 0 0 0 auto;
 	width: 100%; 
 	padding: 30px; 
-	border-radius: 6px; 
 	background: #fff; 
 	align-items: center; 
 } 
-
 .textarea {
 	width:200px;
 	height:50px;
@@ -32,6 +38,7 @@
 	font-weight: 600; 
 	color: #232836; 
 	text-align: center; 
+	margin-top: 100px;
 	margin-bottom: 10px;
 }
 .form-container form input{
@@ -44,34 +51,28 @@
 	background: #eee; 
 	margin: 8px 0;
 } 
-.login .eye-icon{ 
+.field.input-field {
+	position: relative;
+}
+.login .eye-icon, .register .eye-icon{ 
 	position: absolute; 
-	top: 50%;
-	right: 40px; 
+	top: 30%;
+	right: 10px; 
 	font-size: 18px; 
 	color: #8b8b8b; 
 	padding: 5px;
 	cursor: pointer; 
 } 
-.register .eye-icon{ 
-	position: absolute; 
-	top: 53%;
-	right: 40px; 
-	font-size: 18px; 
-	color: #8b8b8b; 
-	padding: 5px;
-	cursor: pointer; 
-}
 .form-container form .form-btn{
-	background: #a9a8a880; 
-	color: #232836; 
+	background: #C55A11; 
+	color: #fff; 
 	font-size: 18px; 
 	letter-spacing: 1px;
 	cursor: pointer; 
 } 
 .form-container form .form-btn:hover{
-	background: #C55A11;
-	color: white;
+	background: #222;
+	color: #fff;
 }
 .form-link{
 	text-align: center; 
@@ -114,7 +115,7 @@
 	}
 } 
 
-/* MAIN PAGE */ 
+/* INDEX.PHP */ 
 .container1{
 	display: flex; 
 	flex-direction: column; 
@@ -123,21 +124,21 @@
 	display: flex; 
 	align-items: flex-end; 
 	justify-content: center; 
-	background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url('images/Background/indexbg.png'); 
+	background-image: url('../login_register/images/Background/purr.png'); 
 	background-repeat: no-repeat; 
 	background-size: cover;
 } 
 .container1 form {
-	max-width: 430px; 
+	max-width: 500px; 
 	width: 100%; 
 	padding: 30px; 
-	border-radius: 6px; 
 	background: #fff; 
-	margin-right: 180px;
-	align-items: center; 
-} 
+	position: fixed; 
+	inset: 0 0 0 auto; 
+}
 .form-container1 form h3{
 	font-size: 20px; 
+	margin-top: 100px;
 	font-weight: 600; 
 	color: #C55A11; 
 	text-align: center; 
@@ -168,19 +169,18 @@
 	max-width: 100%; 
 	height: auto; 
 	margin-bottom: 20px;
-}
+} 
 .form-container1 form p{
 	font-size: 16px; 
 	color: #232836; 
 	text-align: center; 
 	margin-bottom: 70px;
 }
-.container1 .form-container1 .login {
+.container1 .form-container1 .login, .container1 .form-container1 .register {
 	display: block; 
 	width: 100%; 
 	margin: 8px 0; 
 	padding: 15px 15px;
-	background: #C55A11;
 	color: #fff; 
 	border-radius: 40px; 
 	font-weight: 600; 
@@ -189,22 +189,14 @@
 	text-decoration: none; 
 	transition: all 0.2s ease; 
 } 
+.container1 .form-container1 .login {
+	background: #C55A11;
+}
 .container1 .form-container1 .login:active{
 	transform: scale(0.96);
 }
 .container1 .form-container1 .register {
-	display: block; 
-	width: 100%; 
-	margin: 8px 0; 
-	padding: 15px 15px;
 	background: #222;
-	color: #fff; 
-	border-radius: 40px; 
-	font-weight: 600; 
-	text-align: center;
-	letter-spacing: 1px; 
-	text-decoration: none; 
-	transition: all 0.2s ease; 
 }
 .container1 .form-container1 .register:active{
 	transform: scale(0.96);
@@ -224,7 +216,7 @@ section {
 	display: flex; 
 	justify-content: space-between; 
 	align-items: center; 
-	background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(' images/Background/background.png'); 
+	background-image: url(' images/Background/background.png'); 
 	background-size: cover; 
 	background-position: center;
 } 
@@ -247,14 +239,13 @@ header .logo
 	z-index: 1;
 } 
 .nav-bar:before{
-	background: #C55A11; 
+	background: #d67332; 
 	width: 100%; 
 	height: 75%; 
 	position: absolute; 
 	top: 0; 
 	left: 0; 
 	content: ""; 
-	opacity: 0.30; 
 } 
 header .navigation {
 	position: relative; 
@@ -300,7 +291,7 @@ header .navigation li a:hover::after{
 	margin-bottom: 90px;
 }
 .content .textBox h2 {
-	color: #fff; 
+	color: #222; 
 	font-size: 3em; 
 	margin-bottom: 10px; 
 	line-height: 1.4em; 
@@ -311,7 +302,7 @@ span-1 {
 	color: #C55A11;
 }
 .content .textBox p {
-	color: #fff; 
+	color: #222; 
 	font-size: 20px; 
 	text-align: center;
 } 
@@ -470,7 +461,7 @@ span-1 {
 .contact .content1 p {
 	font-size: 18px;
 	font-weight: 300; 
-	color:#fff;
+	color:#222;
 }
 .container3 {
 	text-align: center;
@@ -529,7 +520,7 @@ span-1 {
 	margin-left: 20px; 
 	text-align: left;
 	font-size: 16px; 
-	color: white; 
+	color: #222; 
 	flex-direction: column; 
 } 
 @media (max-width: 991px) {
@@ -578,7 +569,9 @@ span-1 {
     cursor: pointer;
  }
 .products {
-    position:relative;
+    background-color: #e9e9e9; 
+	background-image: none;
+	position:relative;
     width: 100%;
 }                
 /* Grid Container */
@@ -594,7 +587,7 @@ span-1 {
     border: 5px solid #eee;        
     border-radius: 8px;        
     overflow: hidden;        
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);        
+    box-shadow: 0px 0px 20px 8px rgba(114 105 105 / 24%);        
     background-color: white;        
     text-align: center;  
 	cursor: pointer; 
@@ -602,7 +595,7 @@ span-1 {
 	transition-duration: 0.3s; 
 	-webkit-transition-property: transform; 
 	transition-property: transform;
-}         
+}          
 .product-card:hover {
 	-webkit-transform: scale(1.1); 
 	transform: scale(1.1);
@@ -652,7 +645,7 @@ span-1 {
     padding-top: 4.5rem;
 }
 h1 {
-    color: white; 
+    color: #222; 
 	margin-left: 20px;
 }
 .ecart{
@@ -701,7 +694,7 @@ h3{
 } 	
 .cart li:nth-child(even) {
 	background-color: rgb(255 220 196);
-}
+} 
 #cart-content {
     height: 100%;
     overflow-y: scroll;
