--- a/purrfect/style.css
+++ b/purrfect/style.css
@@ -12,6 +12,35 @@
 	justify-content: center; 
 	background-size: cover;
 } 
+.navigation li a.auth-button {
+	display: inline-block;
+	margin-top: -10px;
+}
+.auth-button, .auth-button[href="registration.php"] {
+    display: inline-block;
+    padding: 10px 20px; 
+    margin: 0 -10px; 
+    text-align: center;
+    text-decoration: none; 
+    border-radius: 5px; 
+    transition: background-color 0.3s ease; 
+}
+.auth-button:hover {
+    background-color: #fff; 
+	color: #C55A11;
+}
+.auth-button[href="registration.php"]:hover {
+	background-color: #8c481c7a;
+	color: #fff;
+}
+.auth-button {
+    color: #FFFFFF; 
+    background-color: #8c481c7a;
+}
+.auth-button[href="registration.php"] {
+    background-color: #fff;
+	color: #C55A11; 
+}
 .container { /* LOGIN.PHP */
 	background-image: url('./images/Background/purr2.png');
 }
@@ -242,7 +271,7 @@ section {
 	display: flex; 
 	justify-content: space-between; 
 	align-items: center; 
-	background-image: url('./images/Background/background.png'); 
+	background-image: url('./images/Background/gen.png'); 
 	background-size: cover; 
 	background-position: center;
 } 
@@ -259,7 +288,7 @@ header {
 header .logo 
 {
 	position: relative; 
-	max-width: 270px; 
+	max-width: 190px; 
 	bottom: 12px; 
 	left: 10px; 
 	z-index: 1;
@@ -290,7 +319,7 @@ header .navigation li a {
 	font-size: 18px; 
 	font-weight: 450;
 } 
-header .navigation li a::after{
+header .navigation li a:not(.auth-button)::after{
 	content: '';
 	height: 3px;
 	width: 0;
@@ -303,39 +332,40 @@ header .navigation li a::after{
 header .navigation li a:hover::after{
 	width: 100%;
 } 
-.content {
+.content, .content3 {
 	position: relative; 
 	width: 100%; 
 	display: flex; 
 	justify-content: space-between; 
 	align-items: center;
 } 
-.content .textBox {
+.content3 {
+	justify-content: center;
+}
+.content .textBox, .content3 .textBox {
 	position: relative; 
 	max-width: 800px; 
-	margin: 0 auto; 
+	margin-right: 20px;
 	margin-bottom: 90px;
 }
-.content .textBox h2 {
-	color: #222; 
+.content .textBox h4, .content3 .textBox h4 {
+	color: #fff; 
 	font-size: 3em; 
 	margin-bottom: 10px; 
 	line-height: 1.4em; 
 	font-weight: 700; 
-	text-align: center;
 } 
 span-1 {
 	color: #C55A11;
 }
-.content .textBox p {
-	color: #222; 
-	font-size: 20px; 
-	text-align: center;
-} 
-.content .textBox {
-	text-align: center;
+.content3 span-1 {
+	color: #fff;
 }
-.content .textBox a {
+.content .textBox p, .content3 .textBox p {
+	color: #fff; 
+	font-size: 20px; 
+} 
+.content .textBox a, .content3 .textBox a {
 	display: inline-block; 
 	margin-top: 20px; 
 	padding: 10px 20px;
@@ -348,7 +378,7 @@ span-1 {
 	text-decoration: none; 
 	transition: 0.2s ease-in-out; 
 } 
-.content .textBox a:hover {
+.content .textBox a:hover, .content3 .textBox a:hover {
 	background: #222;
 }
 .sci {
@@ -399,6 +429,32 @@ span-1 {
 	color: white; 
 	margin-top: -10px; 
 }
+.swiper-slide {
+	background-position: center; 
+	background-size: cover; 
+	width: 200px;
+	height: 500px; 
+	display: flex; 
+	justify-content: center; 
+	margin-right: 100px;
+} 
+.swiper-slide img {
+      position: absolute; 
+	  bottom: 0; 
+	  max-height: 100%; 
+} 
+.content .imgBox {
+	width: 700px; 
+	display: flex; 
+	justify-content: flex-end; 
+} 
+.content .imgBox img {
+	max-width: 700px;
+}
+.swiper-3d .swiper-slide-shadow-left,
+.swiper-3d .swiper-slide-shadow-right {
+  background-image: none;
+} 
 @media (max-width: 991px) {
 	header {
 		padding: 40px;
@@ -412,7 +468,7 @@ span-1 {
 	.content {
 		flex-direction: column; 
 	} 
-	.content .textBox {
+	.content .textBox, .content .imgBox {
 		max-width: 100%; 
 	} 
 	header .navigation { 
@@ -427,7 +483,7 @@ span-1 {
 		height: 100%; 
 		color: #C55A11; 
 		background: #C55A11; 
-		background-image: linear-gradient(rgba(197,90,17,0.80),rgba(197,90,17,0.80)), url('images/Background/background.png');
+		background-image: linear-gradient(rgba(197,90,17,0.80),rgba(197,90,17,0.80)), url('images/Background/gen.png');
 		background-size: cover;
 		display: flex; 
 		flex-direction: column; 
@@ -478,6 +534,7 @@ span-1 {
 .contact .content1 {
 	max-width: 70%; 
 	text-align: center;
+	
 } 
 .contact .content1 h2 {
 	font-size: 36px; 
@@ -487,7 +544,7 @@ span-1 {
 .contact .content1 p {
 	font-size: 18px;
 	font-weight: 300; 
-	color:#222;
+	color: #ffffff;
 }
 .container3 {
 	text-align: center;
@@ -724,7 +781,7 @@ h1 {
 h2 {
 	letter-spacing: 1px; 
 	text-align: center;
-	margin-bottom: 20px;
+	margin-bottom: 20px; 
 }
 h3{
 	text-align: center;
@@ -750,41 +807,7 @@ h3{
         width: 100%;
     }
 }
-/* USER_LIST.PHP */ 
-.user_list {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 20px;
-}
-table {
-	width: 100%;
-	border-collapse: collapse;
-}
-table, th {
-	border: 1px solid #ddd;
-	padding: 8px;
-	text-align: left;
-} 
-.container-4 {
-	position: relative;
-	margin-top: 100px; 
-}
-td {
-	border: 1px solid #ddd;
-	padding: 8px;
-	text-align: left;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-th {
-	background-color: #f2f2f2;
-}
-tr:nth-child(even) {background-color: #f9f9f9;}
-.view-btn {
-	padding: 5px 10px;
-	color: #222;
-}
+
 
 /* VIEW_USER.PHP */ 
 .view_user {
@@ -824,95 +847,6 @@ tr:nth-child(even) {background-color: #f9f9f9;}
 }
 .back-listbtn, .home-btn:hover {
 	background-color: #b95613;
-}
-/* SHOPPINGCART.PHP */ 
-.shoppingcart {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 20px;
-	background-color: #f4f4f4;
-}
-
-h1 {
-	color: #333;
-}
-
-/* Table styling */
-table {
-	width: 100%;
-	border-collapse: collapse;
-	margin-top: 20px;
-}
-
-table, th, .cart1 {
-	border: 1px solid #ddd;
-}
-
-tr, .cart1 {
-	padding: 8px;
-	text-align: left;
-}
-
-th {
-	background-color: #4CAF50;
-	color: white;
-}
-
-.cart1 img {
-	margin-right: 10px;
-	vertical-align: middle;
-}
-table .cart1:nth-child(2), 
-table cart1:nth-child(3), 
-table cart1:nth-child(4), 
-table cart1:nth-child(5) {
-	text-align: right;
-}
-tr:nth-child(1), .cart1:nth-child(1) {
-	text-align: left;
-}
-tr:nth-child(2),
-tr:nth-child(3), 
-tr:nth-child(4),
-tr:nth-child(5) {
-	text-align: left;
-}
-/* Button styling */
-input[type="submit"] {
-	background-color: #4CAF50;
-	color: white;
-	padding: 6px 10px;
-	margin: 4px 2px;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-}
-
-input[type="submit"]:hover {
-	background-color: #45a049;
-}
-
-input[type="number"] {
-	background-color: transparent;
-	color: #333;
-	padding: 6px;
-	margin: 4px 2px;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-}
-/* Checkout link styling */
-.shpcrt a {
-	display: inline-block;
-	background-color: #008CBA;
-	color: white;
-	padding: 10px 20px;
-	margin: 20px 0;
-	text-decoration: none;
-	border-radius: 5px;
-}
-
-.shpcart a:hover {
-	background-color: #007B9E;
 }
 
 /* TERMS AND CONDITION / PRIVACY POLICY */ 
